Safari365 Prod/src/objects/OPC__c.object
<CustomObject>
    <fields>
        <fullName>CODE__c</fullName>
        <externalId>true</externalId>
        <label>CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Markup__c</fullName>
        <label>FB_Markup</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GB_Markup__c</fullName>
        <label>GB_Markup</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_From__c</fullName>
        <label>Sale_From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sale_To__c</fullName>
        <label>Sale_To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sell_Round__c</fullName>
        <label>Sell_Round</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>OPC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CODE__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OPC-{00000000}</displayFormat>
        <label>OPC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OPCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>